// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addExpense – Snapshots Store-Zustand nach addExpense entspricht dem Snapshot 1`] = `
[
  {
    "category": "Essen",
    "date": "2026-04-24",
    "description": "Sandwich",
    "id": "1",
    "name": "Migros Mittagessen",
    "price": "8.50",
  },
]
`;

exports[`addExpense – Snapshots Store-Zustand nach mehreren addExpense entspricht dem Snapshot 1`] = `
[
  {
    "category": "Essen",
    "date": "2026-04-25",
    "description": "Sandwich",
    "id": "2",
    "name": "Coop",
    "price": "8.50",
  },
  {
    "category": "Essen",
    "date": "2026-04-24",
    "description": "Sandwich",
    "id": "1",
    "name": "Migros Mittagessen",
    "price": "8.50",
  },
]
`;

exports[`deleteExpense – Snapshots Store-Zustand nach deleteExpense entspricht dem Snapshot 1`] = `
[
  {
    "category": "Essen",
    "date": "2026-04-24",
    "description": "Sandwich",
    "id": "2",
    "name": "Coop",
    "price": "8.50",
  },
]
`;

exports[`deleteExpense – Snapshots leerer Store nach letztem deleteExpense entspricht dem Snapshot 1`] = `[]`;

exports[`initialize – Snapshots Store-Zustand nach initialize entspricht dem Snapshot 1`] = `
{
  "categories": [
    "Essen",
    "Fahren",
    "ÖV",
    "Parkieren",
  ],
  "expenses": [
    {
      "category": "Essen",
      "date": "2026-04-24",
      "description": "Sandwich",
      "id": "1",
      "name": "Migros Mittagessen",
      "price": "8.50",
    },
  ],
  "isInitialized": true,
}
`;

exports[`initialize – Snapshots Store-Zustand nach initialize ohne Daten entspricht dem Snapshot 1`] = `
{
  "categories": [],
  "expenses": [],
  "isInitialized": true,
}
`;

exports[`setPendingImage – Snapshots Store-Zustand nach setPendingImage mit URI entspricht dem Snapshot 1`] = `"file://foto.jpg"`;

exports[`setPendingImage – Snapshots Store-Zustand nach setPendingImage(null) entspricht dem Snapshot 1`] = `null`;

exports[`updateExpense – Snapshots Store-Zustand nach updateExpense entspricht dem Snapshot 1`] = `
[
  {
    "category": "Essen",
    "date": "2026-04-24",
    "description": "Sandwich",
    "id": "1",
    "name": "Coop Einkauf",
    "price": "15.00",
  },
]
`;
